fix(Alert): Ensure close icon is right aligned

--- a/react/Alert/Alert.less
+++ b/react/Alert/Alert.less
@@ -42,6 +42,7 @@
   display: inline-block;
   vertical-align: middle;
   max-width: ~"calc(100% - (@{icon-width} + @{alert-gutter}))";
+  flex-grow: 1;
 
   .hideIcon & {
     max-width: none;
